applications/homer/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr-http
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: http
  hostnames:
  - internal.vw-ops.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr-https
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: https-bare
  hostnames:
  - internal.vw-ops.net
  rules:
  - backendRefs:
    - name: homarr
      port: 7575
